public/styles.css
body {
  font-family: 'Inter', sans-serif;
}

/* Header */
.website-header {
  width: 70%;
  height: 40px;
  margin: auto;
  padding: 20px 20px 0 20px;
  border: 1px solid green;
  background-color: lightgreen;
}

.logo {
  float: left;
  color: black;
}

.website-search-bar {
  float: right;
  color: black;
}

.website-search-bar input {
  color: black;
  background-color: lightgreen;
  border: none;
  border-bottom: 2px solid black;
  width: 100px;
  margin-right: 15px;
  transform: translateY(-5px);
}

.website-search-bar i:hover {
  cursor: pointer;
}

/* Overview */
.overviewWidget {
  width: 1100px;
  margin: auto;
  display: grid;
  /* justify-content: center; */
  /* justify-items: center; */
  grid-template-columns: 10% 51% 5% 34%;
  grid-template-rows: auto auto auto;
}

/* .btn {
  cursor: pointer;
} */

/* OvC Carousel */
.showcaseCarousel {
  grid-column-start: 1;
  grid-column-end: 3;
  grid-row-start: 1;
  grid-row-end: 2;
  height: 615px;
}

.showcaseGallery {
  width: 671px;
  height: 615px;
  margin: 1px;
  display: grid;
  grid-template-columns: 18% 8% 66% 8%;
  /* grid-template-columns: 18% 8% 66% 8%; */
  min-width: 0;
  min-height: 0;
  /* position: relative; */
  /* width:fit-content: cover;
  height:fit-content: cover; */
  /* background-size: cover; */
  /* background-size: contain;
  background-position: center;
  background-repeat: no-repeat; */
  background-color: light gray;
}

.styleGalleryImage {
  grid-column: 1 / 5;
  grid-row: 1;
  width: 671px;
  height: 615px;
  display: grid;
  grid-template-columns: 1fr;
  /* max-width: 100%;
  max-height: 100%; */
  /* display:block; */
  /* object-fit: cover;
  object-position: center;
  min-width: 0;
  overflow: hidden; */
  /* position: relative; */
  /* background-size: contain;
  background-position: center; */
  /* background-repeat: no-repeat; */
  /* background-color: light gray; */
}

#mainImage {
  z-index: 1;
  /* max-width: 100%;
  max-height: 100%; */
  width: 671px;
  height: 615px;
  /* contain maintains aspect ratio inside given dimensions */
  object-fit: contain;
  /* cover mainatains aspect ratio and clips image to fit given dimensions */
  /* object-fit: cover; */
  display: block;
  /* position: relative; */
  /* background-color: light gray; */
}

#upCarrot {
  z-index: 2;
  /* height: 75px;
  width: 75px; */
  /* position: absolute; */
  font-size: x-large;
  background-color: transparent;
  border: 0px;
}
#upCarrot:hover {
  cursor: pointer;
}

#miniThumbnail {
  /* position: absolute; */
  border: 2px solid #888;
  width: 55px;
  height: 55px;
  /* object-fit: cover; */
}
#miniThumbnail:hover {
  cursor: pointer;
  box-shadow: 7px -2.5px lightseagreen;
}

.showcaseThumbnails {
  z-index: 3;
  grid-column: 1;
  grid-row: 1;
  object-fit: cover;
  background-color: transparent;
  /* position: absolute; */
  text-align: center;
  display: grid;
  /* grid-template-columns: repeat(1, 85%); */
  grid-template-columns: repeat(1, 1fr);
  grid-auto-rows: minmax(min-content, max-content);
  justify-content: center;
  align-items: center;
}

#downCarrot {
  z-index: 4;
  /* height: 75px;
  width: 75px; */
  /* position: absolute; */
  background-color: transparent;
  border: 0px;
}
#downCarrot:hover {
  cursor: pointer;
}

button#arrowLeft {
  z-index: 6;
  grid-column: 2;
  grid-row: 1;
  background-color: transparent;
  border: 0px;
  /* position: absolute; */
}
button#arrowLeft:hover {
  cursor: pointer;
}
button#arrowLeft:focus {
  outline:0 !important;
}

button#arrowRight {
  z-index: 5;
  grid-column: 4;
  grid-row: 1;
  background-color: transparent;
  border: 0px;
  /* position: absolute; */
}
button#arrowRight:hover {
  cursor: pointer;
}
button#arrowRight:focus {
  outline:0 !important;
}

/* OvC Product Selector */
.showcaseSelection {
  grid-column: 4;
  grid-row: 1 / 3;
  width: 100%;
  margin: 0.5%;
}

.productAreaItem {
 grid-row: 1;
 /* display: grid; */
 /* grid-template-columns: 1fr 1fr; */
 /* grid-template-rows: auto auto */
}

.productReviewLink {
  display: grid;
  grid-template-columns: 100px auto;
  grid-template-rows: 22px;
}

#prettyReviewStars {
  grid-column: 1;
  grid-row: 1;
  /* border: 1px solid yellow;
  background-color: lightyellow; */
}

#scrollToReviews {
  grid-column: 2;
  grid-row: 1;
  font-size: small;
  display: flex;
  align-items: flex-end;
  /* justify-content: flex-end; */
}

#productMainTitle {
  grid-column: 1 / 3;
  grid-row: 3;
}

.styleSelector {
 grid-row: 2;
}

#styleThumbnails {
  display: grid;
  grid-template-columns: repeat(4, 25%);
  justify-content: center;
  align-items: center;
}

.style-thumbnail-button {
  height: 75px;
  width: 75px;
  background-color: transparent;
  border: 0px;
}

.style-thumbnail {
  border-radius: 50%;
  border: 2px solid #888;
  width: 65px;
  height: 65px;
  object-fit: cover;
}
.style-thumbnail:hover {
  cursor: pointer;
  box-shadow: 12px -12px 0px 3px lightgreen;
}

.cartCrates {
  grid-row: 3;
}

#cartSelectorRow {
  margin-right: 17px;
  display: grid;
  grid-template-columns: 60% 5% 35%;
  grid-template-rows: 42px;
}

#cartSizeSelect {
  grid-column: 1;
  grid-row: 1;
}

#cartSizeDropdown {
  height: 100%;
  width: 100%;
  /* font-size: large; */
  text-align: center;
}
#cartSizeDropdown:hover {
  cursor: pointer;
}

#cartQuantitySelect {
  grid-column: 3;
  grid-row: 1;
}

#cartQuantityDropdown {
  height: 100%;
  width: 100%;
  /* font-size: large; */
  text-align: center;
}
#cartQuantityDropdown:hover {
  cursor: pointer;
}

#cartSubmitRow {
  margin-right: 17px;
  display: grid;
  grid-template-columns: 85% 5% 10%;
  grid-template-rows: 15px 42px;
}

#cartAddToCart {
  grid-column: 1;
  grid-row: 2;
}

#buttonAddToCart {
  height: 100%;
  width: 100%;
  /* font-size: large; */
  /* text-align: center; */
}
#buttonAddToCart:hover {
  cursor: pointer;
}

#buttonAddToBag .x-btn-center {
  text-align: left;
}

#cartAddToPlus {
  grid-column: 3;
  grid-row: 2;
}
/* ... */

